--- a/projeto3/weather/index.html
+++ b/projeto3/weather/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="aviso"></div>
+    <div class="warning"></div>
 
     <footer>Criado por Everton Souza</footer>
 
